refactor3 Security